--- a/tallerUno.ipynb
+++ b/tallerUno.ipynb
@@ -41,9 +41,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.0 + 9.0 es mayor que 7.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Punto 5\n",
     "a: float\n",
@@ -70,9 +78,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El promedio de los números ingresados es: 21.0\n",
+      "La mediana de los números ingresados es: No se puede calcular la mediana.\n",
+      "El promedio multiplicativo de los números ingresados es: 5.5146002378585\n",
+      "Los números ingresados en orden ascendente son: 1.0 1.0 2.0 50.0 51.0\n",
+      "Los números ingresados en orden descendente son: 51.0 50.0 2.0 1.0 1.0\n",
+      "La potencia del mayor número elevado al menor número es: 51.0\n",
+      "La raíz cúbica del menor número es: 1.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Punto 7 \n",
     "\n",
@@ -227,51 +249,86 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Punto 9\n",
-    "Capitales = {\n",
-    "    \"antigua y barbuda\" : \"Saint John\",\n",
-    "    \"argentina\": \"Buenos Aires\",\n",
-    "    \"bahamas\" : \"Nasáu\",\n",
-    "    \"barbados\" : \"Bridgetown\",\n",
-    "    \"bolivia\": \"La Paz\",\n",
-    "    \"brasil\": \"Brasilia\",\n",
-    "    \"canadá\": \"Ottawa\",\n",
-    "    \"chile\": \"Santiago\",\n",
-    "    \"colombia\": \"Bogotá\",\n",
-    "    \"costa rica\": \"San José\",\n",
-    "    \"cuba\": \"La Habana\",\n",
-    "    \"dominica\" : \"Roseau\",\n",
-    "    \"ecuador\": \"Quito\",\n",
-    "    \"estados unidos\": \"Washington D.C\",\n",
-    "    \"granada\" : \"Saint George\",\n",
-    "    \"guatemala\": \"Ciudad de Guatemala\",\n",
-    "    \"guyana\" : \"Georgetown\",\n",
-    "    \"haití\": \"Puerto Príncipe\",\n",
-    "    \"honduras\": \"Tegucigalpa\",\n",
-    "    \"jamaica\": \"Kingston\",\n",
-    "    \"méxico\": \"Ciudad de México\",\n",
-    "    \"nicaragua\": \"Managua\",\n",
-    "    \"panamá\": \"Ciudad de Panamá\",\n",
-    "    \"paraguay\": \"Asunción\",\n",
-    "    \"perú\": \"Lima\",\n",
-    "    \"república dominicana\": \"Santo Domingo\",\n",
-    "    \"salvador\" : \"San Salvador\",\n",
-    "    \"san cristóbal y nieves\":\"Basseterre\",\n",
-    "    \"san vicente y las granadinas\" : \"Kingstown\",\n",
-    "    \"santa lucía\" : \"Catries\",\n",
-    "    \"surinam\" : \"Pabarimo\",\n",
-    "    \"trinidad y tobago\" : \"Puerto España\",\n",
-    "    \"uruguay\" : \"Montevideo\",\n",
-    "    \"venezuela\": \"Caracas\"\n",
-    "}\n",
-    "\n",
-    "País = input(\"Ingrese el nombre de un país de América en minúsculas: \")\n",
-    "\n",
-    "if País in Capitales:\n",
-    "    capital = Capitales[País]\n",
-    "    print(f\"La capital de {País.title()} es {capital.title()}.\")\n",
-    "else:\n",
-    "    print(\"País no identificado.\")"
+    "lang = input(\"Escribe un país de América en minúsculas para saber su Capital: \")\n",
+    "match lang:\n",
+    "    case \"canada\":\n",
+    "      print(\"La capital de Canada es Otawwa\")\n",
+    "    case \"estados unidos\":\n",
+    "      print(\"La capital de Estados Unidos es Washington DC.\")\n",
+    "    case \"mexico\":\n",
+    "      print(\"La capital de Mexico es México DF.\")\n",
+    "    case \"belice\":\n",
+    "      print(\"La capital de Belice es Belmopán.\")\n",
+    "    case \"costa rica\":\n",
+    "      print(\"La capital de Costa Rica es San José.\")\n",
+    "    case \"el salvador\":\n",
+    "      print(\"La capital de El Salvador es San Salvador.\")\n",
+    "    case \"guatemala\":\n",
+    "      print(\"La capital de Guatemala es Ciudad de Guatemala.\")\n",
+    "    case \"honduras\":\n",
+    "      print(\"La capital de Honduras es Tegucigalpa.\")\n",
+    "    case \"nicaragua\":\n",
+    "      print(\"La capital de Nicaragua es Managua.\")\n",
+    "    case \"panama\":\n",
+    "      print(\"La capital de de Panama es Panamá.\")\n",
+    "    case \"argentina\":\n",
+    "      print(\"La capital de Argentina es Buenos Aires.\")\n",
+    "    case \"bolivia\":\n",
+    "      print(\"La capital de Bolivia es Sucre. Aunque siempre creíste que la capital de Bolivia era La Paz, esta es solo su sede de gobierno, su constitución establece que es Sucre.\")\n",
+    "    case \"brasil\":\n",
+    "      print(\"La capital de Brasil es Brasilia.\")\n",
+    "    case \"chile\":\n",
+    "      print(\"La capital de Chile es Santiago de Chile.\")\n",
+    "    case \"colombia\":\n",
+    "      print(\"La capital de Colombia es Bogotá.\")\n",
+    "    case \"ecuador\":\n",
+    "      print(\"La capital de Ecuador es Quito.\")\n",
+    "    case \"paraguay\":\n",
+    "      print(\"La capital de Paraguay es Asunción.\")\n",
+    "    case \"peru\":\n",
+    "      print(\"La capital de Peru es Lima.\")\n",
+    "    case \"surinam\":\n",
+    "      print(\"La capital de Surinam es Parabarimo.\")\n",
+    "    case \"trinidad y tobago\":\n",
+    "      print(\"La capital de Trinidad y Tobago es Puerto España.\")\n",
+    "    case \"uruguay\":\n",
+    "      print(\"La capital de Uruguay es montevideo.\")\n",
+    "    case \"venezuela\":\n",
+    "      print(\"La capital de Venezuela es Caracas.\")\n",
+    "    case \"puerto rico\":\n",
+    "      print(\"Puerto Rico no es considerado un país, ya que pertenece a Estados Unidos.\")\n",
+    "    case \"antigua y barbuda\":\n",
+    "      print(\"La capital de Antigua y Barbuda es Saint John.\")\n",
+    "    case \"bahamas\":\n",
+    "      print(\"La capital de Bahamas es Nasáu.\")\n",
+    "    case \"barbados\":\n",
+    "      print(\"La capital de Barbados es Bridgetown.\")\n",
+    "    case \"cuba\":\n",
+    "      print(\"La capital de Cuba es La Habana.\")\n",
+    "    case \"dominica\":\n",
+    "      print(\"La capital de Dominica es Roseau.\")\n",
+    "    case \"granada\":\n",
+    "      print(\"La capital de Granada es Saint George.\")\n",
+    "    case \"guyana\":\n",
+    "      print(\"La capital de Guyana es Georgetown.\")\n",
+    "    case \"haiti\":\n",
+    "      print(\"La capital de Haití es Puerto Príncipe.\")\n",
+    "    case \"jamaica\":\n",
+    "      print(\"La capital de Jamaica es Kingston.\")\n",
+    "    case \"republica dominicana\":\n",
+    "      print(\"La capital de República Dominicana es Santo Domingo.\")\n",
+    "    case \"san cristobal y nieves\":\n",
+    "      print(\"La capital de San Cristóbal y Nieves es Basseterre.\")\n",
+    "    case \"san vicente y las granadinas\":\n",
+    "      print(\"La capital de San Vicente y las Granadinas es Kingstown.\")\n",
+    "    case \"santa lucia\":\n",
+    "      print(\"La capital de Santa Lucía es Castries.\")\n",
+    "    case \"alaska\":\n",
+    "      print(\"Alaska pertenece a uno de los 50 estados que conforman Estados Unidos, no es un país.\")\n",
+    "    case \"groenlandia\":\n",
+    "      print(\"Groenlandia forma parte de Dinamarca, por eso no está incluido en esta lista.\")\n",
+    "    case _:\n",
+    "      print(\"País no identificado.\")"
    ]
   }
  ],
